--- a/pages/movies/ratingbar/ratingbar.wxml
+++ b/pages/movies/ratingbar/ratingbar.wxml
@@ -1,4 +1,4 @@
-<view class="ratingbar-stars">
+<!-- <view class="ratingbar-stars">
 
   <block wx:for="{{count}}">
       <image wx:if="{{stars/10>=index+1}}" src='/images/ratingbar/star_fill_whole.png'></image>
@@ -6,16 +6,30 @@
       <image wx:else src='/images/ratingbar/star_fill_none.png'></image>
   </block>
   
-
-</view>
-
-<!-- <block wx:for="{{count}}">
+    <!-- <block wx:for="{{count}}">
       <text>{{index}}:{{item}}</text>
-  </block>
-
-  <block wx:for="{{count1}}" wx:for-item="outer" wx:for-index="i">
+    </block>
+    <block wx:for="{{count1}}" wx:for-item="outer" wx:for-index="i">
       <block wx:for="{{count2}}" wx:for-item="inner" wx:for-index="j">
-          <text>{{i}}:{{outer}}</text>
-          <text>{{j}}:{{inner}}</text>
+        <text>{{i}}:{{outer}}</text>
+        <text>{{j}}:{{inner}}</text>
       </block>
-  </block> -->
+    </block> --
+
+</view> -->
+
+<!-- pages/movies/ratingbar/ratingbar.wxml -->
+<template name="template-ratingbar-stars">
+  <view class='ratingbar-stars'>
+    <!-- 数组长度为5，共5次循环显示5颗星星 -->
+    <block wx:for="{{[3,5,6,8,9]}}">
+      <!-- 全黄星星 -->
+      <image wx:if="{{stars/10>=index+1}}" src='/images/ratingbar/star_fill_whole.png' />
+      <!-- 半黄半灰星星 -->
+      <image wx:elif="{{stars/10>=index && stars%10!=0}}" src='/images/ratingbar/star_fill_half.png' />
+      <!-- 全灰星星 -->
+      <image wx:else src='/images/ratingbar/star_fill_none.png' />
+    </block>
+  </view>
+</template>
+
