--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -1,18 +1,9 @@
-  <!-- aboutme.wxml -->
-  <view class="about">
-     <view class="about-wei">
-        <view class="about-img">
-            <image bindtap="bindViewTap" class='in-img' src="{{img}}" mode="cover"></image>
-        </view>
-     <view class="about-title">{{title}}</view>
-     </view>
-     <view class='about-content'>{{intro}}</view>
-
-     <view class='about-addr'>
-      <view class='about-tab'>{{contab}}</view>
-      <view>地址：{{address}}</view>
-      <view>联系电话：{{mobile}}</view>
-      <view>商务合作：{{email}}</view>
-     </view>
-     
+<!-- detail.wxml -->
+<view class="wrap">
+  <view class='title'>{{info.title}}</view>
+  <view class='cTime'>{{info.cTime}}</view>
+  <view class='img'>
+    <image class='in-img' src="{{info.img}}" mode="cover"></image>
   </view>
+  <view>{{info.content}}</view>
+</view>
