--- a/pages/lists/lists.wxml
+++ b/pages/lists/lists.wxml
@@ -22,4 +22,6 @@
 
   <!-- 循环输出列表 end -->
 
+<view bindtap="loadMore" data-lastid="{{lastid}}" class='loadMore'>加载更多</view>
+<toast hidden="{{toastHidden}}" bindchange="toastChange">没有更多文章了</toast>
 </view>
