--- a/pages/lists/lists.wxss
+++ b/pages/lists/lists.wxss
@@ -22,7 +22,7 @@ navigator {
 }
 .infos {
   float: left;
-  width: 240rpx;
+  width: 480rpx;
   height: 200rpx;
   padding: 20rpx 0 20rpx;
 }
@@ -31,4 +31,10 @@ navigator {
   color: #aaa;
   position: absolute;
    bottom: 0;
+}
+.loadMore {
+  text-align: center;
+  margin: 30px;
+  color: #aaa;
+  font-size: 16px;
 }
