--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -6,4 +6,5 @@
     <image class='in-img' src="{{info.img}}" mode="cover"></image>
   </view>
   <view>{{info.content}}</view>
+  <view class='close' bindtap="closepage">返回</view>
 </view>
